[package]
name = "athena-vault-strategy"
version = "1.0.0"
authors = ["Blockcoders <engineering@blockcoders.io>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cw20 = { version = "0.8.0" }
cosmwasm-std = { version = "0.16.0" }
cosmwasm-storage = { version = "0.16.0" }
terra-cosmwasm = "2.2.0" 
terraswap = "2.4.0"
schemars = "0.8.3"
serde = { version = "1.0.129", default-features = false, features = ["derive"] }
athena = { version = "1.0.0", path = "../../packages/athena" }
anchor-market = { version = "0.2.0", path = "../../packages/anchor_market" }
mirror-protocol = { version = "2.1.0", path = "../../packages/mirror_protocol" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0", default-features = false  }
